Replacing 'OpenMoko' with 'Openmoko'

--- a/GPS-Trail.mw
+++ b/GPS-Trail.mw
@@ -10,7 +10,7 @@ These tracks are later annotated using either personal knowledge, or notes taken
 The Neo1973 GPS is quite adequate for this.
 
 
-This article defines the OpenStreetMap Application, an application designed for the OpenMoko platform. This is a [[Look_%26_Feel#Native_Finger-Based | Native Finger-Based]] application.
+This article defines the OpenStreetMap Application, an application designed for the Openmoko platform. This is a [[Look_%26_Feel#Native_Finger-Based | Native Finger-Based]] application.
 
 
 
