--- a/GPS_Problems.mw
+++ b/GPS_Problems.mw
@@ -2,7 +2,7 @@ See [[GPS]] for details on how to evaluate the Freerunner GPS with command line 
 
 === Problem: it takes a long time (10min+) before the Freerunner gets first GPS data ===
 
-It was found that the OpenMoko FreeRunner GPS has a long Time To First Fix (TTFF) with the SD card in the phone. [http://lists.openmoko.org/pipermail/community/2008-July/021774.html This thread] indicates that there is interference from the SD card slot, as without the SD card inserted it the TTFF are much shorter.
+It was found that the Openmoko FreeRunner GPS has a long Time To First Fix (TTFF) with the SD card in the phone. [http://lists.openmoko.org/pipermail/community/2008-July/021774.html This thread] indicates that there is interference from the SD card slot, as without the SD card inserted it the TTFF are much shorter.
 
 ::More specific: the GPS signal level drops by 20dB, i.e. factor 100. Signal strength of a GPS satellite above your head is around -127dBm. Needed strength for a first fix is -145dBm with a minimum of three satellites. Once the GPS chip has a fix, it can operate at signal levels of -157dBm, thus making it possible to operate while there is data transfer from/to the SD card.
 ::''(From http://lists.openmoko.org/pipermail/community/2008-July/022202.html )''
@@ -51,7 +51,7 @@ The following is based on [http://lists.openmoko.org/pipermail/community/2008-Ju
 ::''(From http://lists.openmoko.org/pipermail/community/2008-July/022242.html )''
 
 
-;Do we have to return our FreeRunners to OpenMoko?
+;Do we have to return our FreeRunners to Openmoko?
 :Probably not, because the software workaround should work too.
 
 ;But we can't read from the SD card when the GPS is on?
