--- a/GSM.mw
+++ b/GSM.mw
@@ -34,7 +34,7 @@ See [[GSM02.07]].
 
 For more, see [[Hardware:AT Commands]].
 
-Note that the descendant of this specification is [http://www.3gpp.org/ftp/Specs/html-info/27007.htm 3GPP TS 27.007 - AT command set for User Equipment (UE)]. (Does OpenMoko support any of these newer versions?)
+Note that the descendant of this specification is [http://www.3gpp.org/ftp/Specs/html-info/27007.htm 3GPP TS 27.007 - AT command set for User Equipment (UE)]. (Does Openmoko support any of these newer versions?)
 
 === GSM 07.05 - Additional AT commands (SMS and CBS) ===
 
