--- a/GSM_850_test.mw
+++ b/GSM_850_test.mw
@@ -2,7 +2,7 @@
 
 '''TEST HAS STARTED (in transit to Toronto)'''
 
-As many of you are aware the GTA01's GSM 850 is non-functional at this time. This test was designed by many in the OpenMoko community (thanks to Michael Shiloh) to rectify the situation. A GTA01 was modified and is being shipped around North America and the results will be posted here as they are gathered.
+As many of you are aware the GTA01's GSM 850 is non-functional at this time. This test was designed by many in the Openmoko community (thanks to Michael Shiloh) to rectify the situation. A GTA01 was modified and is being shipped around North America and the results will be posted here as they are gathered.
 
 == Coverage Maps ==
 
@@ -62,7 +62,7 @@ http://www.sqi.gu.edu.au/kimages/Buttons/Bullets/Dots/green_dot_sh.gif the GTA01
 **** SIM Model #: UNKNOWN
 
 **Nevada    http://www.sqi.gu.edu.au/kimages/Buttons/Bullets/Dots/green_dot_sh.gif
-*** OpenMoko Team
+*** Openmoko Team
 *** CES Conference
 **** Area: Las Vegas
 **** Provider: UNKNOWN
