Replacing 'OpenMoko' with 'Openmoko'

--- a/GTA01_Standby.mw
+++ b/GTA01_Standby.mw
@@ -1,6 +1,6 @@
-== The Neo1973 GTA01 (v4) as a day to day OpenMoko phone ==
-''Note: This has been tested using the OpenMoko development snapshot named'' 
- OpenMoko-openmoko-devel-image-glibc-ipk-P1-Snapshot-20080211-fic-gta01.rootfs.tar.gz
+== The Neo1973 GTA01 (v4) as a day to day Openmoko phone ==
+''Note: This has been tested using the Openmoko development snapshot named'' 
+ Openmoko-openmoko-devel-image-glibc-ipk-P1-Snapshot-20080211-fic-gta01.rootfs.tar.gz
 
 ''installed on the SD partition. Kernel is used as it is supplied right in this .tar.gz. ''
 ''The author of this small text snippet sees no reason why this would not work with other openmoko configurations, though.''
