Replacing 'OpenMoko' with 'Openmoko'

--- a/GTA01_revisions.mw
+++ b/GTA01_revisions.mw
@@ -13,7 +13,7 @@ And as from GTA01Bv1:
 * Bluetooth (;
 
 == GTA01v3 ==
-First generation of prototypes that was given to internal OpenMoko software developers.
+First generation of prototypes that was given to internal Openmoko software developers.
 
 Unfortunately not useful at all due to non-working touchscreen.
 
