Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_FreeRunner_partitions.mw
+++ b/Neo_FreeRunner_partitions.mw
@@ -25,7 +25,7 @@ GTA02 partitions different from [[partitions|GTA01 partitions]], it comes with e
 
 <pre>
 memento:~# dfu-util -l
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Found DFU: [0x1457:0x5119] devnum=9, cfg=0, intf=0, alt=0, name="RAM 0x32000000"
@@ -40,7 +40,7 @@ Here, [[OlivierBerger|I]] get something different when device is in root menu fr
 
 <pre>
 # ./dfu-util -l
-dfu-util - (C) 2007 by OpenMoko Inc.
+dfu-util - (C) 2007 by Openmoko Inc.
 This program is Free Software and has ABSOLUTELY NO WARRANTY
 
 Found DFU: [0x1d50:0x5119] devnum=122, cfg=0, intf=0, alt=0, name="RAM 0x32000000"
