--- a/GUI_Style_Guidelines.mw
+++ b/GUI_Style_Guidelines.mw
@@ -1,10 +1,10 @@
 == Abstract ==
 
-Openmoko is a platform targeted at small screen devices. This means that many of the usual desktop paradigms of windows and menus do not apply very well due to the limited space. Different form factors mean that displays on these devices are often at different orientations and aspect ratios. The OpenMoko platform tries to address some of these differences by providing a framework in which application authors do not need to be too concerned about the final layout of their application.
+Openmoko is a platform targeted at small screen devices. This means that many of the usual desktop paradigms of windows and menus do not apply very well due to the limited space. Different form factors mean that displays on these devices are often at different orientations and aspect ratios. The Openmoko platform tries to address some of these differences by providing a framework in which application authors do not need to be too concerned about the final layout of their application.
 
 == Top Level Overview ==
 
-OpenMoko applications are designed as a number of "pages", which may have a number of relationships between them. Each page contains one task, such as selecting a contact or viewing a calendar.
+Openmoko applications are designed as a number of "pages", which may have a number of relationships between them. Each page contains one task, such as selecting a contact or viewing a calendar.
 
 
 === Layout Abstraction ===
@@ -67,9 +67,9 @@ GTK+ is a C library that uses GObject for pseudo object orientation. This allows
 
 === General Guidelines ===
 
-OpenMoko code mostly uses the c99 standard for C.
+Openmoko code mostly uses the c99 standard for C.
 
-Spacing,widgets sizes and fonts '''must not''' be hard coded into OpenMoko applications. OpenMoko is a framework for small screen devices, which may include anything as small as QVGA (320x240) to 800x600. Therefore, for applications to work on these different resolutions, programs must not hard code anything to do with the specific appearance of widgets.
+Spacing,widgets sizes and fonts '''must not''' be hard coded into Openmoko applications. Openmoko is a framework for small screen devices, which may include anything as small as QVGA (320x240) to 800x600. Therefore, for applications to work on these different resolutions, programs must not hard code anything to do with the specific appearance of widgets.
 
 === Programming Guidelines ===
 Most on screen elements such as buttons and entry boxes are sub classed from the GtkWidget base class. The normal practice is to cast up from this class. For this reason, all the creator functions return GtkWidget rather than the class of which they are creating. GTK+ has many macros that check the type and then cast for you, for example, GTK_TREE_VIEW(foo) will check the pointer "foo" is a GtkTreeView and then cast the pointer to a GtkTreeView pointer.
