--- a/GUI_Style_Guidelines%2Fde.mw
+++ b/GUI_Style_Guidelines%2Fde.mw
@@ -1,10 +1,10 @@
 ==Abstraktes==
 
-OpenMoko ist eine Platform für Geräte mit kleinen Bildschirmen. Somit werden viele gebräuchliche Desktop-Elemente wie Fenster und Menüs schlecht nutzbar. Für Unterschiede in der Display-Produktion (z.B. Aspect Ratio) versucht OpenMoko ein Framework bereit zu stellen, so dass Applikationsentwickler sich nicht mit schlussendlichen Layout auseinander setzen müssen.
+Openmoko ist eine Platform für Geräte mit kleinen Bildschirmen. Somit werden viele gebräuchliche Desktop-Elemente wie Fenster und Menüs schlecht nutzbar. Für Unterschiede in der Display-Produktion (z.B. Aspect Ratio) versucht Openmoko ein Framework bereit zu stellen, so dass Applikationsentwickler sich nicht mit schlussendlichen Layout auseinander setzen müssen.
 
 ==Top Level Overview==
 
-OpenMoko-Applikationen werden als mehrere Seiten dargestellt, welche unterschiedliche Beziehungen untereinander haben. Jede Seite ist ein Task, wie das Auswählen eines Kontakts oder das durchsuchen des Kalenders.
+Openmoko-Applikationen werden als mehrere Seiten dargestellt, welche unterschiedliche Beziehungen untereinander haben. Jede Seite ist ein Task, wie das Auswählen eines Kontakts oder das durchsuchen des Kalenders.
 
 ==Layout Abstraction==
 
@@ -64,9 +64,9 @@ GTK+ is a C library that uses GObject for pseudo object orientation. This allows
 
 ==General Guidelines==
 
-OpenMoko code mostly uses the c99 standard for C.
+Openmoko code mostly uses the c99 standard for C.
 
-Spacing,widgets sizes and fonts must not be hard coded into OpenMoko applications. OpenMoko is a framework for small screen devices, which may include anything as small as QVGA (320x240) to 800x600. Therefore, for applications to work on these different resolutions, programs must not hard code anything to do with the specific appearance of widgets.
+Spacing,widgets sizes and fonts must not be hard coded into Openmoko applications. Openmoko is a framework for small screen devices, which may include anything as small as QVGA (320x240) to 800x600. Therefore, for applications to work on these different resolutions, programs must not hard code anything to do with the specific appearance of widgets.
 
 ==Programming Guidelines==
 
