--- a/Manuals%2FNeo_1973%2Fit.mw
+++ b/Manuals%2FNeo_1973%2Fit.mw
@@ -8,7 +8,7 @@ Leggi [[Disassembling Neo1973/it|Disassemblare il Neo1973]].
 
 === Accendere il cellulare ===
 [[Image:Neo1973_uboot_splash.jpg|200px|thumb|Schermata del bootloader]]
-Premendo semplicemente il pulsante di accensione (a seconda della propria versione di [[u-boot/it|u-boot]] si deve premere per un tempo >= a 5 secondi) dovrebbe permettere al cellulare di attivare il bootloader, avviare il kernel e infine entrare in X/OpenMoko.
+Premendo semplicemente il pulsante di accensione (a seconda della propria versione di [[u-boot/it|u-boot]] si deve premere per un tempo >= a 5 secondi) dovrebbe permettere al cellulare di attivare il bootloader, avviare il kernel e infine entrare in X/Openmoko.
 
 Una volta premuto il pulsante di accensione per un tempo sufficientemente lungo, il cellulare vibra leggermente e le luci dello schermo si accendono. È ora possibile rilasciare il pulsante e guardare il cellulare mentre si avvia.
 
