--- a/Getting_Started_with_your_Neo_1973.mw
+++ b/Getting_Started_with_your_Neo_1973.mw
@@ -88,7 +88,7 @@ The card should automatically be available under /media/card the next time you b
 
 === Powering up the phone ===
 [[Image:Neo1973_uboot_splash.jpg|200px|thumb|bootloader splash screen]]
-Just hitting the power button (depending on your [[u-boot]] version you have to press for >= 5 seconds) should get the phone first into the bootloader, then boot the kernel, and get into  X/OpenMoko. The shipped battery typically has enough charge to boot up directly without charging through the usb cable first.
+Just hitting the power button (depending on your [[u-boot]] version you have to press for >= 5 seconds) should get the phone first into the bootloader, then boot the kernel, and get into  X/Openmoko. The shipped battery typically has enough charge to boot up directly without charging through the usb cable first.
 
 Once you have pressed the power button sufficiently long, the vibrator makes a short pulse and the screen backlight turns on. You can now release the power button and watch the phone booting.
 
