Replacing 'OpenMoko' with 'Openmoko'

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -226,7 +226,7 @@ If you have multiple partitions on the card, the first (/dev/mmcblk0p1) will be 
 
 == Set up USB-based networking, SSH and update ==
 
-OpenMoko allows TCP/IP-over-USB networking for your phone. The main advantages of this are
+Openmoko allows TCP/IP-over-USB networking for your phone. The main advantages of this are
 * You don't need to set-up GPRS or WLAN network connection for the phone software to reach the Internet
 * You can SSH from your computer into the phone shell and comfortably do low-level tasks using your computer's terminal software and real keyboard instead of the tiny screen and touchscreen keyboard
 
@@ -387,7 +387,7 @@ There were critical [[GPS Problems]] earlier that are largely fixed in newest ke
 
 ===Play with WLAN, GPRS and Bluetooth===
 
-There are plenty of development opportunities to integrate these functions in the OpenMoko software.
+There are plenty of development opportunities to integrate these functions in the Openmoko software.
 
 '''WLAN''': See [[Wireless Networking]]
 
