Replacing 'OpenMoko' with 'Openmoko'

--- a/Manuals%2FNeo_FreeRunner%2Ffr.mw
+++ b/Manuals%2FNeo_FreeRunner%2Ffr.mw
@@ -3,7 +3,7 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #cccccc; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:75% " |  
  <div align="left">
-Merci d'avoir acheté cette version du Neo FreeRunner pour les développeurs. Le téléphone [[Neo FreeRunner]] est la deuxième plate-forme matérielle à utiliser OpenMoko. Ce guide vous aidera à mieux connaître votre Neo FreeRunner et commencer à utiliser votre Neo FreeRunner.
+Merci d'avoir acheté cette version du Neo FreeRunner pour les développeurs. Le téléphone [[Neo FreeRunner]] est la deuxième plate-forme matérielle à utiliser Openmoko. Ce guide vous aidera à mieux connaître votre Neo FreeRunner et commencer à utiliser votre Neo FreeRunner.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
 [[Image:Freerunner box.png|200px|thumb|La Boîte Neo FreeRunner]]
 |}
@@ -95,7 +95,7 @@ Ces manières vous permettent de mettre à jour le noyau et le système de fichi
 
 </td>
 <td style="width: 10px; white-space: nowrap; padding: 4px 1em 0 0.5em; border-right: 1px solid #ffffff;">[[Image:Menu2.jpg|200px|right|thumb]]</td><td style="padding: 1px 1em 0; background: #eeeeee;">
-Maintenez enfoncée la touche bouton d'alimentation (environ 8 secondes) jusqu'à ce que l'écran d'accueil OpenMoko se présente. Vous pouvez lachez le bouton d'alimentation, ainsi Le Neo FreeRunner s'amorera avec l'Image OpenMoko.
+Maintenez enfoncée la touche bouton d'alimentation (environ 8 secondes) jusqu'à ce que l'écran d'accueil Openmoko se présente. Vous pouvez lachez le bouton d'alimentation, ainsi Le Neo FreeRunner s'amorera avec l'Image Openmoko.
 
 </td></tr></table>
 </div>
@@ -144,7 +144,7 @@ Maintenez le bouton AUX enfoncé, puis appuyez sur le bouton d'alimentation et m
 
 ===Déverouiller l'écran===
 
-Lorsque l'écran est verrouillé, vous voyez un graphique vert du style Matrix avec le symbole OpenMoko au centre du bas de l'écran, un symbole verrouiller et déverrouiller. Si vous faites glisser le symbole OpenMoko sur le symbole déverrouiller en haut, alors l'écran sera déverrouillée.
+Lorsque l'écran est verrouillé, vous voyez un graphique vert du style Matrix avec le symbole Openmoko au centre du bas de l'écran, un symbole verrouiller et déverrouiller. Si vous faites glisser le symbole Openmoko sur le symbole déverrouiller en haut, alors l'écran sera déverrouillée.
 
 ==Flasher le Neo FreeRunner==
 Comme le développement d'Openmoko continu, Openmoko publie réguliérement des versions mises à jour du système de fichier racine Openoko, du noyau, et de[[Bootloader|U-Boot]]. Ils peuvent être programmé dans la mémoire Flash du Neo FreeRunner. Vous pouvez utiliser le cable USB et l'outil fourni par Openmoko pour flasher le Neo FreeRunner.
@@ -249,7 +249,7 @@ Maintenant, il devrait être immédiatement possible de vous connecter à votre 
 
  ssh root@openmoko
 
-La ligne ajoutée ci-dessus vous permet d'ouvrir une connection ssh sur OpenMoko, elle ne permet pas OpenMoko de se connecter à l'Internet. Pour faire cela, suivre les instructions dans la section [[USB_Networking]].
+La ligne ajoutée ci-dessus vous permet d'ouvrir une connection ssh sur Openmoko, elle ne permet pas Openmoko de se connecter à l'Internet. Pour faire cela, suivre les instructions dans la section [[USB_Networking]].
 
 ==Annexe==
 Si vous souhaitez en savoir plus sur le FreeRunner, vous pouvez obtenir davantage d'information sur les sujets qui suivent:
