Replacing 'OpenMoko' with 'Openmoko'

--- a/Manuals%2FNeo_FreeRunner%2Fpl.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fpl.mw
@@ -3,7 +3,7 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #cccccc; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:75% " |  
  <div align="left">
-Dziękujemy za zakup developerskiej wersji Neo FreeRunnera. Telefon Neo FreeRunner jest drugą platformą sprzętową korzystającą z OpenMoko. Ten przewodnik pozwoli Ci poznać Neo FreeRunnera i przedstawi, jak rozpocząć z nim pracę.
+Dziękujemy za zakup developerskiej wersji Neo FreeRunnera. Telefon Neo FreeRunner jest drugą platformą sprzętową korzystającą z Openmoko. Ten przewodnik pozwoli Ci poznać Neo FreeRunnera i przedstawi, jak rozpocząć z nim pracę.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
 [[Image:Freerunner box.png|200px|thumb|Zapakowany Neo FreeRunner]]
 |}
@@ -96,7 +96,7 @@ Przytrzymanie przycisku AUX przez sekundę powoduje pojawienie się menu, które
 * Screenshot: Start an application to save an image file of the current screen contents
 
 ===Odblokowywanie ekranu===
-Kiedy ekran jest zablokowany, powinieneś zobaczyć zieloną grafikę (w stylu Matrix) z symbolem OpenMoko na środku dolnej części ekranu razem z symbolami blokowania i odblokowywania. Jeśli przeciągniesz ikonę OpenMoko do symbolu odblokowania na górze, ekran zostanie odblokowany.
+Kiedy ekran jest zablokowany, powinieneś zobaczyć zieloną grafikę (w stylu Matrix) z symbolem Openmoko na środku dolnej części ekranu razem z symbolami blokowania i odblokowywania. Jeśli przeciągniesz ikonę Openmoko do symbolu odblokowania na górze, ekran zostanie odblokowany.
 
 === Importowanie kontaktów ===
 If you can export your contacts to VCard format, either multiple files or single file containing all of them, you may use the script on [[Import Vcf Contacts]] page to bring them to Neo.
@@ -147,7 +147,7 @@ Teraz powinno być możliwe połączenie z telefonem przez polecenie:
 
  ssh root@openmoko
 
-Powyższa metoda łączy wyłącznie poprzez ssh. Żeby połączyć OpenMoko do Internetu przeczytaj [[USB Networking]].
+Powyższa metoda łączy wyłącznie poprzez ssh. Żeby połączyć Openmoko do Internetu przeczytaj [[USB Networking]].
 
 =====Udostępnianie Internetu poprzez USB=====
 Ubuntu: 
@@ -273,7 +273,7 @@ Możesz uruchomić Neo FreeRunner'a na wiele sposobów:
 
 Uruchamianie urządzenia poprzez NAND i NOR FLASH pozwala na aktualizację kernela i systemu plików root'a.
 
-====Uruchamianie obrazu OpenMoko====
+====Uruchamianie obrazu Openmoko====
 
 <div align-center>
 <table width="100%" style="clear: both; border: 1px solid #ffffff; border-collapse: collapse; padding: 0.2em; margin: 0; font-size: 100%; margin: 0 1px;">
