--- a/Gllin.mw
+++ b/Gllin.mw
@@ -9,7 +9,7 @@ Instructions, how to use the driver, are given at:
 
 http://lists.openmoko.org/pipermail/community/2007-November/011916.html. 
 
-The similar instructions are described in more details at [[getting GPS console output with gllin]]. The downloaded .ipk package can be installed and works not just on OpenMoko but also on Qtopia.
+The similar instructions are described in more details at [[getting GPS console output with gllin]]. The downloaded .ipk package can be installed and works not just on Openmoko but also on Qtopia.
 
 
 == gllin options ==
