Replacing 'OpenMoko' with 'Openmoko'

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -22,7 +22,7 @@ Status: 1/10
 
 
 == Austria ==
-There is a group-buy page at MetaLab, available here: http://metalab.at/wiki/OpenMoko .. we almost have the full 10 slots assigned, and its quite possible that we will order *20* phones, so please register on the Metalab pages and let us know if you're interested .. 
+There is a group-buy page at MetaLab, available here: http://metalab.at/wiki/Openmoko .. we almost have the full 10 slots assigned, and its quite possible that we will order *20* phones, so please register on the Metalab pages and let us know if you're interested .. 
 
 === Salzburg ===
 Status: 1/10
@@ -32,7 +32,7 @@ Status: 1/10
 === Wien ===
 Status: 2/10
 * M. Greifeneder [http://wiki.openmoko.org/wiki/Special:Emailuser/mikegr Contact me here]
-* J. Vaughan (torpor) -- http://metalab.at/wiki/OpenMoko [http://wiki.openmoko.org/wiki/Special:Emailuser/torpor Contact me here]
+* J. Vaughan (torpor) -- http://metalab.at/wiki/Openmoko [http://wiki.openmoko.org/wiki/Special:Emailuser/torpor Contact me here]
 
 
 === Styria ===
@@ -69,7 +69,7 @@ Status : 1/10
 === Brussels ===
 Status 6/10
 
-'''NO''' OpenMoko FreeRunner 900/1800 available anymore (on July 3, 2008 at 21h) as needed in Europe. Furthermore,
+'''NO''' Openmoko FreeRunner 900/1800 available anymore (on July 3, 2008 at 21h) as needed in Europe. Furthermore,
 confirmation: From Pulster.eu: ''Our sales price is 299 EUR + shipping 15 EUR in Europe = 314 EUR. The idea of "open" is ours. So check our price calculation: if you order the Freerunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR. So it will be cheaper and we Europeans have 2 years of warranty when buying from Pulster, instead of a 14 days(?) for imported goods.''
 
  Cancelled for the above reason (and not 10 people reached) * npettiaux [http://wiki.openmoko.org/wiki/Special:Emailuser/Npettiaux Contact me here]
@@ -336,12 +336,12 @@ Status : 12/10
 == Denmark ==
 If we do not reach a total large enough, Denmark **is** a very small place - surely we could figure out a way of getting them to find their way 'round the country :)
 
-=== EU (german) vs. Direct (OpenMoko) discussion ===
+=== EU (german) vs. Direct (Openmoko) discussion ===
 
 Esben Damgaard has created a Google Group discussion to evaluate which is the optimal:
 http://groups.google.com/group/freerunner-order-dk
 
-[[User:asbjorn | Asbjørn Sloth Tønnesen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/asbjorn (contact)] has [http://groups.google.com/group/freerunner-order-dk/browse_thread/thread/cd68b49d8520ecd2# offered] to act as invoice hub for group sales from either OpenMoko or Handheld-Linux. [[User:asbjorn | Details]]
+[[User:asbjorn | Asbjørn Sloth Tønnesen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/asbjorn (contact)] has [http://groups.google.com/group/freerunner-order-dk/browse_thread/thread/cd68b49d8520ecd2# offered] to act as invoice hub for group sales from either Openmoko or Handheld-Linux. [[User:asbjorn | Details]]
 
 === Invoice considerations ===
 
@@ -355,7 +355,7 @@ Should anyone need it, transportation from Aalborg to Thisted for phones can be 
 
 As it looks right now, it seems that it would be cheaper and easier for us to buy through Pulster in Germany - see the following email: http://lists.openmoko.org/pipermail/community/2008-May/017778.html ~leinir
 
-- It indeed is: [http://www.pulster.de/index.htm?d__om___b_OpenMoko_Freerunner__b_991.htm], the price is 299.00 EUR per piece i we buy 10, and shipping is 14.90 EUR.~Cybe
+- It indeed is: [http://www.pulster.de/index.htm?d__om___b_Openmoko_Freerunner__b_991.htm], the price is 299.00 EUR per piece i we buy 10, and shipping is 14.90 EUR.~Cybe
 
 * Dan Leinir Turthra Jensen <br /> mailto:admin@leinir.dk <br /> [[User:Leinir]]
 * Fabian Olesen <br /> mailto:firewalkerx@gmail.com
@@ -413,7 +413,7 @@ Status: 12/10
 * [[User:knmeister | Kristian Nielsen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/knmeister (contact)] <strike>(I need 1 with invoice)</strike> Seems it is easier to buy from a reseller.
 * [[User:hammerfar | Henrik Hammer Berthelsen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/hammerfar (contact)] (2 with invoice) - ordering through [[User:asbjorn|Asbjørn]] as a hub.
 * [[User:Bubbi | Steen Nielsen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/Bubbi (contact)] (<strike>2 with invoice</strike> - buying through reseller)
-* [[User:asbjorn | Asbjørn Sloth Tønnesen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/asbjorn (contact)] (I need 1 with invoice) I has [http://groups.google.com/group/freerunner-order-dk/browse_thread/thread/cd68b49d8520ecd2# offered] to act as hub for group sales from OpenMoko and Handheld-Linux.
+* [[User:asbjorn | Asbjørn Sloth Tønnesen]] [http://wiki.openmoko.org/wiki/Special:Emailuser/asbjorn (contact)] (I need 1 with invoice) I has [http://groups.google.com/group/freerunner-order-dk/browse_thread/thread/cd68b49d8520ecd2# offered] to act as hub for group sales from Openmoko and Handheld-Linux.
 * [[User:KlaymenDK | Jan Gundtofte-Bruun]]  [http://wiki.openmoko.org/wiki/Special:Emailuser/KlaymenDK (contact)] -- will wait until software is stable enough to work as primary mobile phone
 
 == Estonia ==
@@ -644,7 +644,7 @@ Status 5/10
 I just want to see if there are enough people to fill up to ten. So add your name here if you are interested.
 
 *[[Special:Emailuser/Whoever|whoever]] - Ich nehm eins, wenn die Münchner keines übrig haben.
-*[[Special:Emailuser/paddy2706|paddy2706]] - Ein OpenMoko bitte :)
+*[[Special:Emailuser/paddy2706|paddy2706]] - Ein Openmoko bitte :)
 
 Wann werden die dann bestellt/gezahlt? Dauert bei mir no kurz bis ichs Geld für zusammen hab aber dann nehm ich eins.
 MfG [http://wiki.openmoko.org/wiki/Special:Emailuser/MookiE MookiE]
@@ -666,14 +666,14 @@ Hallo, ich würde mich für einen Freerunner interessieren. Wie sieht es mit Zol
  $458 / 1,5$/€ = 305 € pro Telefon (als Richtwert)
 
 ==== München ====
-Hilf mit, eine [[OpenMoko_Local_Groups:_Munich|Münchner UserGroup]] aufzubauen!
+Hilf mit, eine [[Openmoko_Local_Groups:_Munich|Münchner UserGroup]] aufzubauen!
 
-Die Münchner Gruppe organisiert manchmal Sammelbestellungen. Um zu erfahren, ob gerade eine Sammelbestellung läuft, oder um eine neue zu initiieren, schau einfach auf der '''[[OpenMoko_Local_Groups:_Munich|Münchner UserGroup Seite]]''' vorbei!
+Die Münchner Gruppe organisiert manchmal Sammelbestellungen. Um zu erfahren, ob gerade eine Sammelbestellung läuft, oder um eine neue zu initiieren, schau einfach auf der '''[[Openmoko_Local_Groups:_Munich|Münchner UserGroup Seite]]''' vorbei!
 
 === Berlin===
 ==== Berlin ====
 
-Help to form a [[OpenMoko_Local_Groups:_Berlin|Berlin User Group]]!
+Help to form a [[Openmoko_Local_Groups:_Berlin|Berlin User Group]]!
 
 Status 20/20
 * Eckhard - I am doing a group order [8/10] available [http://wiki.openmoko.org/wiki/Special:Emailuser/Ejokisch Contact]
@@ -815,11 +815,11 @@ ordering rules:
 ==== participiants ====
 # <s>Ferenc 'Lion' Veres [http://wiki.openmoko.org/wiki/Special:Emailuser/kempelen Contact] lion kukac netngine pont hu</s> ordered
 # <s>Laszlo 'rka' Szabo [http://wiki.openmoko.org/wiki/Special:Emailuser/rka Contact]</s>
-# tg [http://wiki.openmoko.org/wiki/Special:Emailuser/tg?wpSubject=OpenMoko%20GroupSales Contact]
+# tg [http://wiki.openmoko.org/wiki/Special:Emailuser/tg?wpSubject=Openmoko%20GroupSales Contact]
 # Árva T. Mihály - lirul [KUKAC] hixsplit [PONT] hu (Suspended, I've removed myself from order lists transitionally [080804].)
 # Nyosigomboc - nyos [KUKAC] nyos [PONT] homelinux [PONT] net
 # Ludvig Adam - hunludvig [KUKAC] gmail [PONT] com
-# [http://wiki.openmoko.org/wiki/Special:Emailuser/asdmin?wpSubject=OpenMoko%20GroupSales Dániel 'asd' Vásárhelyi]
+# [http://wiki.openmoko.org/wiki/Special:Emailuser/asdmin?wpSubject=Openmoko%20GroupSales Dániel 'asd' Vásárhelyi]
 # btamas, [http://wiki.openmoko.org/wiki/Special:Emailuser/btamas Contact]
 # Kovács 'ka87' András, andras [kukac] csevego [pont] net
 # pcm, pcm [kukac] freemail [pont] hu
@@ -1507,7 +1507,7 @@ So, the total cost of a Freerunner as part of a 10 pack, will be:<br>
 
 Also, for the person buying, don't forget that there is likely charges from VISA for foreign exchange. ASB is 2.1% of the purchase price which will add ~$12.50 ea. to the price.
 
-'''[http://nicegear.co.nz nicegear]''' may be bringing some in depending on pricing from OpenMoko.
+'''[http://nicegear.co.nz nicegear]''' may be bringing some in depending on pricing from Openmoko.
 
 === Auckland ===
 ==== [[Auckland group sales|Auckland]] ====
@@ -2726,17 +2726,17 @@ People that canceled their commitment for now:
 
 === Barcelona ===
 ==== Barcelona ====
-OpenMokos for this list have allready been purchased. Hoorray!
+Openmokos for this list have allready been purchased. Hoorray!
 look for members? look at the España-Portugal [[IberiaGroupSale]]
 
 === Valencia ===
 ==== Valencia ====
-OpenMokos for this list have allready been purchased. Hoorray!
+Openmokos for this list have allready been purchased. Hoorray!
 look for members? look at the España-Portugal [[IberiaGroupSale]]
 
 === Islas Canarias ===
 ==== Tenerife ====
-OpenMokos for this list have allready been purchased. Hoorray!
+Openmokos for this list have allready been purchased. Hoorray!
 look for members? look at the España-Portugal [[IberiaGroupSale]]
 
 == Sweden ==
@@ -3452,7 +3452,7 @@ Status: 1/10
 Status : 3/10
 * Joe Wells (Edinburgh) [http://www.macs.hw.ac.uk/~jbw/ Web] I have two comments:
 ** The Wiki's e-mail feature (those URLs with “Special:Emailuser” in them) does not seem to be working.  I tried contacting Dave Ball and Stuart MacKinnon that way and got no reply.  Later, Stuart and Dave (who I reached by writing a message here) told me they never got the e-mail.  So the Wiki's e-mail feature might be broken.  So please contact me by going to my web page and using my e-mail address listed there.  Stuart, George, and Dave have been in contact with me by e-mail.  I am happy to put anyone in Scotland who sends me e-mail in touch with the others.
-** Not enough people have gotten in touch so far (as of 2008-06-28) to justify a bulk order of a 10-pack.  Also, there is now a UK distributor: [https://www.truebox.co.uk/trueboxportal/index.php?wk=OpenMoko TrueBox].  Because TrueBox appears to be ordering 10-packs (and thereby getting the bonus goodies (headphones and pouches) that come in the 10-packs), it seems there is little motivation to try to organize a Scottish bulk order.  So I am likely to give up on the idea of a Scottish bulk order for myself (unless lots of people contact me in the next day or so!).
+** Not enough people have gotten in touch so far (as of 2008-06-28) to justify a bulk order of a 10-pack.  Also, there is now a UK distributor: [https://www.truebox.co.uk/trueboxportal/index.php?wk=Openmoko TrueBox].  Because TrueBox appears to be ordering 10-packs (and thereby getting the bonus goodies (headphones and pouches) that come in the 10-packs), it seems there is little motivation to try to organize a Scottish bulk order.  So I am likely to give up on the idea of a Scottish bulk order for myself (unless lots of people contact me in the next day or so!).
 * Dave Ball (Edinburgh) [http://wiki.openmoko.org/wiki/Special:Emailuser/Daveb Contact]
 * george Maistros (Edinburgh) [http://wiki.openmoko.org/wiki/Special:Emailuser/mordilo_k Contact]
 
