Replacing 'OpenMoko' with 'Openmoko'

--- a/Gsmd%2Fde.mw
+++ b/Gsmd%2Fde.mw
@@ -1,4 +1,4 @@
-[[gsmd]] ist der [[GSM]] Daemon, der als ein Hintergrundprozess auf dem OpenMoko läuft und die Verwaltung der traditionellen 'Telefon' Funktionen (Sprache/SMS/GPRS) des Neo1973 übernimmt.
+[[gsmd]] ist der [[GSM]] Daemon, der als ein Hintergrundprozess auf dem Openmoko läuft und die Verwaltung der traditionellen 'Telefon' Funktionen (Sprache/SMS/GPRS) des Neo1973 übernimmt.
 
 Weitere technische Details und API Dokumentationen stehen [[Gsmd/document |hier]] zur Verfügung.
 
