Replacing 'OpenMoko' with 'Openmoko'

--- a/Gsmd%2Fit.mw
+++ b/Gsmd%2Fit.mw
@@ -176,7 +176,7 @@ Inoltre, il tracciamento di gsmd degli stati di permette di condurre una sicura 
 * libero
 * occupato
 
-I sorgenti di gsmd si trovano nell'[[OpenMoko svn/it|svn di OpenMoko]] nella directory src/target/gsm.
+I sorgenti di gsmd si trovano nell'[[Openmoko svn/it|svn di Openmoko]] nella directory src/target/gsm.
 
 {{Languages | Gsmd}}
 
