Replacing 'OpenMoko' with 'Openmoko'

--- a/Hardware:AT_Commands.mw
+++ b/Hardware:AT_Commands.mw
@@ -6,7 +6,7 @@ http://pda.etsi.org/pda/queryform.asp to get it), plus some of the
 optional ones. This GSM standard even has a command that lists the list of available
 commands (AT+CLAC)."
 
-On [[OpenMoko]], the commands should be used via [[gsmd]].
+On [[Openmoko]], the commands should be used via [[gsmd]].
 
 See also:
 
