Replacing 'OpenMoko' with 'Openmoko'

--- a/Hardware_Developer%2Fes.mw
+++ b/Hardware_Developer%2Fes.mw
@@ -2,7 +2,7 @@ En esta sección encontrará usted información sobre las herramientas para desa
 
 == Hardware/ Parte física ==
 
-* [[:Category:Neo1973 Hardware | Descripción física del Neo1973 (Hardware)]] - El primer teléfono de FIC con OpenMoko
+* [[:Category:Neo1973 Hardware | Descripción física del Neo1973 (Hardware)]] - El primer teléfono de FIC con Openmoko
 ** [[Disassembling Neo1973]] -Descripción fotográfica del desensamblaje del Neo1973
 * [[Debug Board]] -- Tarjeta de depuración para el Neo1973. 
 ** [[Connecting Neo1973 with Debug Board v2]] (Segunda versión de la tarjeta anterior)
