--- a/Hardware_Developer%2Fit.mw
+++ b/Hardware_Developer%2Fit.mw
@@ -2,7 +2,7 @@ In questa sezione si trovano informazioni principalmente per gli sviluppatori ha
 
 == Hardware ==
 
-* [[:Category:Neo1973 Hardware | Neo1973 Hardware]] - Il primo cellulare FIC con OpenMoko
+* [[:Category:Neo1973 Hardware | Neo1973 Hardware]] - Il primo cellulare FIC con Openmoko
 ** [[Disassembling Neo1973/it|Disassemblare il Neo1973]] - Una sequenza fotografica su come si può disassemblare l'hardware
 * [[Debug Board/it|Debug Board]] -- La debug board per l'hardware Neo1973
 ** [[Connecting Neo1973 with Debug Board v2/it|Connettere il Neo1973 con la Debug Board v2]] (Questo è per la nuova Debug Board v2)
