Replacing 'OpenMoko' with 'Openmoko'

--- a/Hints_on_using_GIT_and_stgit.mw
+++ b/Hints_on_using_GIT_and_stgit.mw
@@ -190,7 +190,7 @@ The kernel trees in git currently use branches in a structured way to allow stag
 
 * The default '''master''' branch is just the vanilla kernel.org kernel, either tracking git or at a fixed stable version.
 
-* A '''mokopatches''' branch off master contains the current OpenMoko kernel patchset for the kernel
+* A '''mokopatches''' branch off master contains the current Openmoko kernel patchset for the kernel
 
 * A '''development''' (or some other names) branch(es) off '''mokopatches''' then contains just the patch stack that is being worked on in that branch for whatever reason
 
