--- a/Host-based_development_with_Xoo_and_Xephyr.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr.mw
@@ -138,7 +138,7 @@ Each of these packages can be compiled with the well-known-triple of:
 
 ==Data files==
 
-Some of the data files are not yet installed. We will create links so that OpenMoko finds the data files and uses them directly from the svn directories that you have checked out. To create the links:
+Some of the data files are not yet installed. We will create links so that Openmoko finds the data files and uses them directly from the svn directories that you have checked out. To create the links:
 
   cd /usr/local/share/matchbox
   ln -s /local/pkg/openmoko/src/target/OM-2007.2/misc/openmoko-today2-folders vfolders
