--- a/Host-based_development_with_Xoo_and_Xephyr%2Fit.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr%2Fit.mw
@@ -1,11 +1,11 @@
-Vedere anche [[Getting OpenMoko working on host with Xephyr/it|Far funzionare OpenMoko su host con Xephyr]], è probabile che contenga informazioni più aggiornate.
+Vedere anche [[Getting Openmoko working on host with Xephyr/it|Far funzionare Openmoko su host con Xephyr]], è probabile che contenga informazioni più aggiornate.
 
 == Cosa è Xoo ==
 [http://projects.o-hand.com/xoo/ Xoo] è un wrapper per Server X annidati, basato su GTK2. Tipicamente, il Server X è '''Xnest''', il Server X annidato, o [http://projects.o-hand.com/xephyr Xephyr]. Si rivolge a sviluppatori di sistemi embedded che hanno bisogno di simulare device particolari (con dimensioni del display '''accurate''', tasti hardware, etc) su macchine desktop.
 
 Attualmente, viene trattato solo come far funzionare Xoo con '''Xnest'''. Sono comunque pianificate istruzioni per far funzionare Xoo con [http://projects.o-hand.com/xephyr Xephyr].
 
-''Xoo non è necessario per simulare l'hardware OpenMoko - semplicemente migliora la presentazione''
+''Xoo non è necessario per simulare l'hardware Openmoko - semplicemente migliora la presentazione''
 
 == Installare Xoo sul proprio host ==
 Per gli utenti gentoo, eseguire
@@ -17,10 +17,10 @@ Per Fedora (il pacchetto è stato inviato a Fedora per l'approvazione, vedere ht
 
 Per gli altri, trovare un modo per farlo con la propria distro.
 
-==  Creare l'immagine OpenMoko (ottenere rootfs) ==
+==  Creare l'immagine Openmoko (ottenere rootfs) ==
 Prima di tutto, bisogna creare una openmoko-devel-image e ottenere la directory rootfs. Un buon metodo è fare in modo che rootfs sia adatta alla macchina host visto che la maggior parte di noi non ha l'hardware giusto.
 
-Per creare una openmoko-devel-image per la propria architettura, seguire [[MokoMakefile/it|Creare OpenMoko usando MokoMakefile]].
+Per creare una openmoko-devel-image per la propria architettura, seguire [[MokoMakefile/it|Creare Openmoko usando MokoMakefile]].
 
 Prima di eseguire make openmoko-devel-image ed ottenere rootfs (prima del passo 5) eseguire:
  # sed -i 's/fic-gta01/x86/' build/conf/local.conf
@@ -60,7 +60,7 @@ Avviare l'ambiente protetto mokobox
 ==  Avviare il server X annidato ==
 === Avviare Xoo ===
 In un terminale diverso (non legato al chroot mokobox), avviare Xoo. Scaricare
-[http://www.datenfreihafen.org/~stefan/OpenMoko/neo1973-xoo-device.tar.bz2] ed eseguire per un tema neo 1973 carino.
+[http://www.datenfreihafen.org/~stefan/Openmoko/neo1973-xoo-device.tar.bz2] ed eseguire per un tema neo 1973 carino.
  # xoo --device neo1973.xml
 
 === Avviare il client X ===
@@ -69,7 +69,7 @@ Esportare la variabile display
  # export DISPLAY=localhost:1.0
 Avviare il window manager.
  # x-window-manager
-Da questo momento dovresti avere Xnest & Xoo che eseguono OpenMoko in una finestra.
+Da questo momento dovresti avere Xnest & Xoo che eseguono Openmoko in una finestra.
 
 
 <span id="bottom"></span> 
