Replacing 'OpenMoko' with 'Openmoko'

--- a/Host-based_development_with_Xoo_and_Xephyr%2Fru.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr%2Fru.mw
@@ -1,12 +1,12 @@
-==Запуск OpenMoko на ПК с Xoo==
+==Запуск Openmoko на ПК с Xoo==
 
-Для запуска OpenMoko на обычном ПК (x86/x86_64) необходимо собрать OpenMoko для x86-платформы или скачать уже собранный образ (называемый rootfs), а также настроить X-сервер, эмулирующий экран Neo1973.
+Для запуска Openmoko на обычном ПК (x86/x86_64) необходимо собрать Openmoko для x86-платформы или скачать уже собранный образ (называемый rootfs), а также настроить X-сервер, эмулирующий экран Neo1973.
 
 == rootfs ==
 
 === Сборка ===
 
-Для сборки rootfs для платформы x86 воспользуйтесь инструкцией [[MokoMakefile|Building OpenMoko using the MokoMakefile]], с единственной поправкой: перед запуском
+Для сборки rootfs для платформы x86 воспользуйтесь инструкцией [[MokoMakefile|Building Openmoko using the MokoMakefile]], с единственной поправкой: перед запуском
  make openmoko-devel-image
 замените целевую платформу с fic-gta01 на x86 в файле настроек сборки:
  # sed 's/fic-gta01/x86/' build/conf/local.conf
@@ -51,7 +51,7 @@ ebuild /usr/portage/x11-misc/xoo/xoo-0.7.ebuild digest
 * Выполните chroot в rootfs:
  # sudo chroot rootfs /bin/sh
 == Запуск ==
-В другом терминале запустите Xoo ([http://www.datenfreihafen.org/~stefan/OpenMoko/neo1973-xoo-device.tar.bz2 здесь] лежит "шкурка" Neo1973 для Xoo):
+В другом терминале запустите Xoo ([http://www.datenfreihafen.org/~stefan/Openmoko/neo1973-xoo-device.tar.bz2 здесь] лежит "шкурка" Neo1973 для Xoo):
  # xoo --device neo1973.xml
 В чруте запустите оконный менеджер:
  # DISPLAY=localhost:1.0 x-window-manager
