Replacing 'OpenMoko' with 'Openmoko'

--- a/IPhone%2Fes.mw
+++ b/IPhone%2Fes.mw
@@ -1,4 +1,4 @@
-= Comparación entre el iPhone de Apple y el "iPhone Libre" Neo1973 ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) con Linux OpenMoko =
+= Comparación entre el iPhone de Apple y el "iPhone Libre" Neo1973 ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) con Linux Openmoko =
 
 {{Note|La versión de Neo1973 en esta página es la [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]- la cual estará lista para Octubre de 2007. Para la comparación con el Neo1973 vea [[IPhone_(GTA01)]]}}
 
@@ -59,7 +59,7 @@ Expandible con [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_C
  |-
  |Sistema operativo
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 su propia versión de OS X])
- |[[OpenMoko]] Linux (código fuente disponible)
+ |[[Openmoko]] Linux (código fuente disponible)
  |-
  |Software
  |Software básico de PDA + PMP. El software sólo puede ser desarrollado por compañías autorizadas ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
@@ -104,7 +104,7 @@ Expandible con [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_C
 |-
 |Tiendas
 |[http://www.apple.com/retail/workshops/ Free Hands-on Workshops]
-|Haga un evento OpenMoko en su área!
+|Haga un evento Openmoko en su área!
  |}
 {{Languages|iPhone}}
 
