Replacing 'OpenMoko' with 'Openmoko'

--- a/IPhone%2Ffr.mw
+++ b/IPhone%2Ffr.mw
@@ -1,4 +1,4 @@
-== Comparaison entre iPhone Apple et the "Open Source iPhone" Neo1973 ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) fonctionne sous OpenMoko Linux ==
+== Comparaison entre iPhone Apple et the "Open Source iPhone" Neo1973 ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) fonctionne sous Openmoko Linux ==
 {{Note|Catte page concerne la révision [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]] du Neo1973 prévu pour début 2008. Pour la version précédente, voir [[IPhone_(GTA01)]]}}
 Apple a annoncé son [http://www.apple.com/iphone/technology/specs.html iPhone] au MacWorld 2007. Il est quelque peu comparable au [http://lists.openmoko.org/pipermail/community/2007-January/001006.html Neo1973 FIC] annoncé à la fin de l'année 2006.
 
@@ -57,7 +57,7 @@ Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Système d'exploitation
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 une optimisée mais compléte version d'OS X])
- |[[OpenMoko]] Linux (Code source disponible)
+ |[[Openmoko]] Linux (Code source disponible)
  |-
  |Logiciel
  |PDA de base+ Logiciels multimédia inclus. Les logiciels peuvent seulement être créés par des sociétés autorisées ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
