Replacing 'OpenMoko' with 'Openmoko'

--- a/IPhone%2Fit.mw
+++ b/IPhone%2Fit.mw
@@ -1,4 +1,4 @@
-== Confronto tra Apple iPhone e l' "iPhone Open Source" Neo1973 ([[Neo1973/it#.22Fase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) che esegue OpenMoko Linux ==
+== Confronto tra Apple iPhone e l' "iPhone Open Source" Neo1973 ([[Neo1973/it#.22Fase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) che esegue Openmoko Linux ==
 {{Note|Il Neo1973 revisionato in questa pagina è il [[Neo1973/it#.22Fase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02-revision]] che è annunciato per 2007. Per la revisione del precedente neo1973 visita [[IPhone_(GTA01)]]}}
 Apple ha annunciato il suo [http://www.apple.com/iphone/technology/specs.html iPhone] al MacWorld 2007. E' molto simile al [http://lists.openmoko.org/pipermail/community/2007-January/001006.html FIC Neo1973] annunciato nell'autunno del  2006.
 
@@ -57,7 +57,7 @@ Forse sarà espandibile con [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Sistema Operativo
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 una ottimizzata ma completa versione di OS X])
- |[[OpenMoko]] Linux (Sorgenti disponibili)
+ |[[Openmoko]] Linux (Sorgenti disponibili)
  |-
  |Software
  |Basic PDA + PMP software incluso. I software possono essere creti solo dalle compagnie autorizzate ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Fonte])
@@ -101,7 +101,7 @@ Forse sarà espandibile con [http://www.techtree.com/India/News/Samsung_Readies_
  |-
  |Dove acquistarlo
  |[http://www.apple.com/retail/workshops/ Apple Store (USA],[http://www.apple.com/uk/retail/workshops/  Gran Bretagna], [http://store.apple.com/Apple/WebObjects/francestore/ Francia], [http://store.apple.com/Apple/WebObjects/germanstore/ Germania)]
- |Controlla gli eventi OpenMoko nella tua zona!
+ |Controlla gli eventi Openmoko nella tua zona!
  |}
 {{Languages|iPhone}}
 
