Replacing 'OpenMoko' with 'Openmoko'

--- a/IPhone_(GTA01).mw
+++ b/IPhone_(GTA01).mw
@@ -1,4 +1,4 @@
-== Comparison between Apple iPhone and the FIC Neo1973 ([http://wiki.openmoko.org/wiki/Neo1973#Phase_1_.28GTA01Bv4.29 (GTA01Bv4]) running OpenMoko Linux ==
+== Comparison between Apple iPhone and the FIC Neo1973 ([http://wiki.openmoko.org/wiki/Neo1973#Phase_1_.28GTA01Bv4.29 (GTA01Bv4]) running Openmoko Linux ==
 
 {{Note|This page is about is the [[Neo1973#Phase_1_.28GTA01Bv4.29|GTA01Bv4-revision]] that was released to developers only in July 2007. For the later FIC Freerunner model see [[IPhone|GTA02]]}}
 
@@ -52,7 +52,7 @@
  |-
  |Operating system
  |OS X ([http://www.macworld.co.uk/ipod-itunes/news/index.cfm?newsid=16927 an optimised but full version of OS X])
- |[[OpenMoko]] Linux (Source code available)
+ |[[Openmoko]] Linux (Source code available)
  |-
  |Software
  |Basic PDA + PMP software included. Software can only be created by authorized companies ([http://apple.slashdot.org/article.pl?sid=07/01/12/0430200&from=rss Source])
