--- a/Import_Vcf_Contacts.mw
+++ b/Import_Vcf_Contacts.mw
@@ -42,7 +42,7 @@ To use the manage Script you need your Contacts in VCF format.
 
 === Exporting from Outlook / ActiveSync to VCF ===
 
-Doing a quick google I was unable to find a free export plugin for outlook (they all seem to want between $19.95 and $49), so I put together some quick-and-dirty VB code to do it. To use it, Open Outlook, then open the VB editor by pressing ALT-F11, Insert a module, and paste in the following. Change "Z:\OpenMoko\contacts" to wherever you want your vcf files saved (should be an existing, empty directory), and press F5 to run it.
+Doing a quick google I was unable to find a free export plugin for outlook (they all seem to want between $19.95 and $49), so I put together some quick-and-dirty VB code to do it. To use it, Open Outlook, then open the VB editor by pressing ALT-F11, Insert a module, and paste in the following. Change "Z:\Openmoko\contacts" to wherever you want your vcf files saved (should be an existing, empty directory), and press F5 to run it.
 
 '''Code:'''
 
@@ -63,7 +63,7 @@ Sub ExportContactsToVCF()
 
     For Each CN In Fld.Items
         Debug.Print CN.FullName
-        CN.SaveAs "z:\OpenMoko\contacts\" & CN.FullName & ".vcf", olVCard
+        CN.SaveAs "z:\Openmoko\contacts\" & CN.FullName & ".vcf", olVCard
     Next CN
 
     MsgBox "Done!"
