Replacing 'OpenMoko' with 'Openmoko'

--- a/Introduction%2Fcs.mw
+++ b/Introduction%2Fcs.mw
@@ -1,4 +1,4 @@
-OpenMoko je projekt, který si klade za cíl vytvořit první zcela svobodné programové vybavení pro mobilní telefony na světě. 
+Openmoko je projekt, který si klade za cíl vytvořit první zcela svobodné programové vybavení pro mobilní telefony na světě. 
 
 We believe in standardization bottom-up (defined and implemented by the community), instead of top-down (defined by a consortium).
 
@@ -6,18 +6,18 @@ Věříme v přístup zdola nahoru (bottom-up), tedy v definici a implementaci p
 
 Pro získání více informací můžete shlédnout [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html následující ohlášení] (v angličtině).
 
-OpenMoko je vyvíjené tak, aby běželo na všech druzích zařízení schopných běhu operačního systému Linux. První takto podporovaným OpenMoko telefonem je FIC Neo1973.
+Openmoko je vyvíjené tak, aby běželo na všech druzích zařízení schopných běhu operačního systému Linux. První takto podporovaným Openmoko telefonem je FIC Neo1973.
 
-Tento projekt byl započat společnostmi [[FIC|FIC, Inc.]] a [http://www.openmoko.com OpenMoko, Inc.] 
+Tento projekt byl započat společnostmi [[FIC|FIC, Inc.]] a [http://www.openmoko.com Openmoko, Inc.] 
 
 == Zvukové záznamy ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express s Timem Pritlovem a Haraldem Weltem (německo)]
 
 == Videa ==
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Telefonní hovor na Neo1973. Video od Daniela 'alphaone' Willmanna]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video s výkladem o OpenMoko od Seana Mosse Pultze na FOSdemu, 23. února 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video s výkladem o Openmoko od Seana Mosse Pultze na FOSdemu, 23. února 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Kvalitnější verze výše zmíněného výkladu.] S čitelným textem.
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko v Tossugu], Předvedené Seanem Mossem Pultzem a Haralde Weltem na Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko v Tossugu], Předvedené Seanem Mossem Pultzem a Haralde Weltem na Taipei Open Source Software User Group (TOSSUG)
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt1.mp4 MokoNinja infilturuje FIC] Hrají Mickey, Harald, The Neo, a další..
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt2.mp4 Přehrávání videa na Neo1973  (pokus..)] ByOd Dr. Michaela 'Mickey' Lauera
 * [http://www.youtube.com/watch?v=5D6i6vLlhGA AGPS Demo na Neo1973] Od mokoNinji na YouTube
