--- a/Introduction%2Fde.mw
+++ b/Introduction%2Fde.mw
@@ -1,4 +1,4 @@
-OpenMoko ist ein Versuch, das erste Mobiltelefon der Welt zu erschaffen, das ausschlie&szlig;lich auf offener Software basiert.
+Openmoko ist ein Versuch, das erste Mobiltelefon der Welt zu erschaffen, das ausschlie&szlig;lich auf offener Software basiert.
 
 Wir glauben an Standards die von einer Community geschaffen wurden, anstatt von einem gro&szlig;en Unternehmen.
 
@@ -6,9 +6,9 @@ Wir glauben an Standards die von einer Community geschaffen wurden, anstatt von 
 
 Eine ausf&uuml;hrliche Einleitung gibt es [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html hier (englisch)].
 
-OpenMoko ist so konzipiert, dass es auf allen Mobiltelefonen laufen wird, die auf Linux basieren. Das erste komplett unterst&uuml;tzte ist das Neo1973.
+Openmoko ist so konzipiert, dass es auf allen Mobiltelefonen laufen wird, die auf Linux basieren. Das erste komplett unterst&uuml;tzte ist das Neo1973.
 
-Diese Initiative wurde von [[FIC|FIC Inc.]] und OpenMoko, Inc ins Leben gerufen.
+Diese Initiative wurde von [[FIC|FIC Inc.]] und Openmoko, Inc ins Leben gerufen.
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express mit Tim Pritlove und Harald Welte (deutsch)]
@@ -17,7 +17,7 @@ Diese Initiative wurde von [[FIC|FIC Inc.]] und OpenMoko, Inc ins Leben gerufen.
 * [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video der Pr&auml;sentation von Sean Moss Pultz auf der FOSdem am 23. Februar 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Alternative Version des obrigen Videos, in h&ouml;herer Aufl&ouml;sung und mit Fokus auf die Projektorfl&auml;che.] Der Text ist hier im Gegensatz zum Video oben lesbar.
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Angerufen Werden und anrufen mit dem Neo1973. Video courtesy Daniel 'alphaone' Willmann]
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko at Tossug], Presented by Sean Moss Pultz and Harald Welte  at Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko at Tossug], Presented by Sean Moss Pultz and Harald Welte  at Taipei Open Source Software User Group (TOSSUG)
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt1.mp4 MokoNinja infiltrates FIC] Featuring Mickey, Harald, The Neo, and more..
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt2.mp4 Videos mit dem Neo1973  abspielen] By Dr. Michael 'Mickey' Lauer
 * [http://www.youtube.com/watch?v=5D6i6vLlhGA AGPS Demonstration des Neo1973] By mokoNinja on YouTube
