--- a/Introduction%2Fes.mw
+++ b/Introduction%2Fes.mw
@@ -4,20 +4,20 @@ Nosotros creemos en el modelo «(bottom-up)» (Definida e implementada por la co
 
 Para mayor información, por favor dirigirse a: [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html Este anuncio]
 
-OpenMoko está diseñado para ser usado en la mayoría de dispositivos móviles que soporten o estén soportados sobre Linux. EL primer dispositivo Openmoko totalmente basado sobre linux es el [[Neo1973/es|Neo1973]] y [[Neo FreeRunner/es|Neo FreeRunner ]].
+Openmoko está diseñado para ser usado en la mayoría de dispositivos móviles que soporten o estén soportados sobre Linux. EL primer dispositivo Openmoko totalmente basado sobre linux es el [[Neo1973/es|Neo1973]] y [[Neo FreeRunner/es|Neo FreeRunner ]].
 
-Este proyecto ha sido iniciado por [[FIC|FIC Ltda.]]y [http://www.openmoko.com OpenMoko, Inc.]
+Este proyecto ha sido iniciado por [[FIC|FIC Ltda.]]y [http://www.openmoko.com Openmoko, Inc.]
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express with Tim Pritlove and Harald Welte (german)]
 
 == Videos == 
 * [http://www.youtube.com/watch?v=jRvtAAXTIlg World Debut: The First Completely Open Mobile Phone ]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video of the talk about OpenMoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video of the talk about Openmoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Neo1973 realizando una llamada. Un video cortesía de: Daniel 'alphaone' Willmann]
 
 * [http://rapidshare.com/files/18781887/rect.avi Version of above talk, in higher resolution, with the screen zoomed and transformed to the projector screen.] Text is visible here, unlike in the version above.
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko at Tossug], Presented by Sean Moss Pultz and Harald Welte  at Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko at Tossug], Presented by Sean Moss Pultz and Harald Welte  at Taipei Open Source Software User Group (TOSSUG)
 * [http://www.youtube.com/watch?v=5D6i6vLlhGA AGPS Demo on the Neo1973] By mokoNinja on YouTube
 * [http://www.youtube.com/watch?v=hn7wuxlTNvs TangoGPS] at YouTube
 
