--- a/Introduction%2Ffr.mw
+++ b/Introduction%2Ffr.mw
@@ -1,15 +1,15 @@
 
 {{Introbox}}
 
-OpenMoko est en train de créer le premier framework au monde complétement libre pour téléphone portable.
+Openmoko est en train de créer le premier framework au monde complétement libre pour téléphone portable.
 
 Nous imaginons une standardisation ascendante(définie et implentée par la communauté), plutot que descendante(définie par un consortium).
 
 Pour une introduction plus complète voyez [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html cette annonce]
 
-OpenMoko est supposé fonctionner sur tout les téléphones portables compatibles Linux. Le premier téléphone OpenMoko entierement supporté est le FIC [[Neo1973]].
+Openmoko est supposé fonctionner sur tout les téléphones portables compatibles Linux. Le premier téléphone Openmoko entierement supporté est le FIC [[Neo1973]].
 
-Cette initiative a été lancée par [[FIC|FIC Inc.]] et [http://www.openmoko.com OpenMoko, Inc.]
+Cette initiative a été lancée par [[FIC|FIC Inc.]] et [http://www.openmoko.com Openmoko, Inc.]
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express avec Tim Pritlove et Harald Welte (en allemand)]
@@ -18,9 +18,9 @@ Cette initiative a été lancée par [[FIC|FIC Inc.]] et [http://www.openmoko.co
 * [http://www.youtube.com/watch?v=jRvtAAXTIlg World Debut: Le premier téléphone portable complétement libre]
 * [http://www.youtube.com/watch?v=tQPjfUqp-dk&mode=related&search= Neo1973 Vidéo promotionnelle (rapide aperçu du matériel et du logiciel)]
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Neo1973 effectuant un appel. Video courtesy Daniel 'alphaone' Willmann]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Video Google sur la présentation de OpenMoko par Sean Moss Pultz au FOSdem le 23 Fevrier 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Video Google sur la présentation de Openmoko par Sean Moss Pultz au FOSdem le 23 Fevrier 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Même version que ci-dessus, en meilleure résolution, zoomé, et rétroprojeté.] 
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko à Tossug], Présenté par Sean Moss Pultz et Harald Welte à Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko à Tossug], Présenté par Sean Moss Pultz et Harald Welte à Taipei Open Source Software User Group (TOSSUG)
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt1.mp4 MokoNinja infiltre FIC] Avec Mickey, Harald, The Neo, et bien d'autres..
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt2.mp4 Video playback on Neo1973  (sort of..)] Par Dr. Michael 'Mickey' Lauer
 * [http://www.youtube.com/watch?v=5D6i6vLlhGA Demonstration de l'A-GPS  sur le Neo1973] par mokoNinja sur YouTube
