Replacing 'OpenMoko' with 'Openmoko'

--- a/Introduction%2Fit.mw
+++ b/Introduction%2Fit.mw
@@ -1,22 +1,22 @@
 {{Introbox/it}}
-OpenMoko è un progetto che tenta di creare il primo set di software per cellulari completamente open-source al mondo.
+Openmoko è un progetto che tenta di creare il primo set di software per cellulari completamente open-source al mondo.
 
 Crediamo nella standardizzazione del metodo bottom-up (definito e implementato dalla comunità), al posto del top-down (definito da un gruppo ristretto).
 
 Per un'introduzione più dettagliata, leggere [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html questo annuncio]
 
-OpenMoko è stato progettato per girare su tutti i cellulari compatibili con Linux. Il primo cellulare OpenMoko completamente supportato è il FIC Neo1973.
+Openmoko è stato progettato per girare su tutti i cellulari compatibili con Linux. Il primo cellulare Openmoko completamente supportato è il FIC Neo1973.
 
-Quest'iniziativa è stata ideata da [[FIC/it|FIC Inc.]] e [http://www.openmoko.com OpenMoko, Inc.]
+Quest'iniziativa è stata ideata da [[FIC/it|FIC Inc.]] e [http://www.openmoko.com Openmoko, Inc.]
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express con Tim Pritlove e Harald Welte (tedesco)]
 
 == Video == 
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Neo1973 che esegue una telefonata. Concesso cortesemente da Daniel 'alphaone' Willmann]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Video Google della conferenza su OpenMoko di Sean Moss Pultz al FOSdem il 23 Febbraio 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Video Google della conferenza su Openmoko di Sean Moss Pultz al FOSdem il 23 Febbraio 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Versione della precedente chiamata, ad una maggiore risoluzione, con lo schermo ingrandito e trasformato sul proiettore]. Qui è visibile il testo, al contrario della precedente versione.
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko al Tossug], Presentato da Sean Moss Pultz e Harald Welte al Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko al Tossug], Presentato da Sean Moss Pultz e Harald Welte al Taipei Open Source Software User Group (TOSSUG)
 
 == Foto ==
 
