--- a/Introduction%2Fnl.mw
+++ b/Introduction%2Fnl.mw
@@ -1,13 +1,13 @@
-OpenMoko is een poging om 's werelds eerste totaal open mobiele telefoon software te creëren. 
+Openmoko is een poging om 's werelds eerste totaal open mobiele telefoon software te creëren. 
 
 Wij geloven in omgekeerde standaardisatie (gedefinieerd en geïmplementeerd door de gemeenschap), in plaats van boven naar beneden standaardisatie (gedefinieerd door een bedrijf).
 
 Voor een uitgebreidere introductie, zie:
 [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html this announcement]
 
-OpenMoko zou op verschillende toestellen moeten kunnen draaien die ook linux kunnen draaien. De eerste volledig ondersteunde OpenMoko telefoon is de  Neo1973 van FIC.
+Openmoko zou op verschillende toestellen moeten kunnen draaien die ook linux kunnen draaien. De eerste volledig ondersteunde Openmoko telefoon is de  Neo1973 van FIC.
 
-De grote motors achter dit project zijn [[FIC/nl|FIC Inc.]] en [http://www.openmoko.com OpenMoko, Inc.]
+De grote motors achter dit project zijn [[FIC/nl|FIC Inc.]] en [http://www.openmoko.com Openmoko, Inc.]
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express met Tim Pritlove en Harald Welte (duits)]
@@ -16,9 +16,9 @@ De grote motors achter dit project zijn [[FIC/nl|FIC Inc.]] en [http://www.openm
 * [http://www.youtube.com/watch?v=jRvtAAXTIlg Wereld debuut: de eerste compleet vrije mobiele telefoon]
 * [http://www.youtube.com/watch?v=tQPjfUqp-dk&mode=related&search= Neo1973 promotie video {kort hardware/software overzicht}]
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi Neo1973 telefonerend. Video courtesy Daniel 'alphaone' Willmann]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video van de talk about OpenMoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video van de talk about Openmoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Versie van het filmpje hierboven in hogere resolutie, met gezoomd scherm en op het projectorscherm getoond. Tekst is hier zichtbaar, in tegenstelling tot bovenstaande versies.
-* [http://video.google.com/videoplay?docid=-8574715471341709984 OpenMoko bij Tossug], gepresenteerd door Sean Moss Pultz en Harald Welte  bij de Taipei Open Source Software User Group (TOSSUG)
+* [http://video.google.com/videoplay?docid=-8574715471341709984 Openmoko bij Tossug], gepresenteerd door Sean Moss Pultz en Harald Welte  bij de Taipei Open Source Software User Group (TOSSUG)
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt1.mp4 MokoNinja infiltrates FIC] Featuring Mickey, Harald, The Neo, en meer...
 * [http://people.openmoko.org/ninjutsu/NinjutsuVol1pt2.mp4 Video playback on Neo1973  (soort van..)] By Dr. Michael 'Mickey' Lauer
 * [http://www.youtube.com/watch?v=5D6i6vLlhGA AGPS Demo on the Neo1973] By mokoNinja on YouTube
