Replacing 'OpenMoko' with 'Openmoko'

--- a/Introduction%2Fpl.mw
+++ b/Introduction%2Fpl.mw
@@ -1,18 +1,18 @@
-OpenMoko ma na celu stworzenie pierwszego na świecie całkowicie otwartego oprogramowania dla telefonów komórkowych.
+Openmoko ma na celu stworzenie pierwszego na świecie całkowicie otwartego oprogramowania dla telefonów komórkowych.
 Wierzymy w możliwość ustalania standardów przez społeczność użytkowników oprogramowania, a nie odgórnie - przez konsorcja.
 
-Dodatkowe informacje można przeczytać w [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html obwieszczeniu OpenMoko Team]
+Dodatkowe informacje można przeczytać w [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html obwieszczeniu Openmoko Team]
 
-Założeniem systemu OpenMoko jest możliwość działania na wszystkich rodzajach linuksowych telefonów komórkowych. Pierwszym całkowicie obsługiwanym przez OpenMoko telefonem jest Neo1973 firmy FIC.
+Założeniem systemu Openmoko jest możliwość działania na wszystkich rodzajach linuksowych telefonów komórkowych. Pierwszym całkowicie obsługiwanym przez Openmoko telefonem jest Neo1973 firmy FIC.
 
-Inicjatywa została zapoczątkowana przez [[FIC|FIC Inc.]] i [http://www.openmoko.com/ OpenMoko Inc.]
+Inicjatywa została zapoczątkowana przez [[FIC|FIC Inc.]] i [http://www.openmoko.com/ Openmoko Inc.]
 
 == Audio ==
 * [http://chaosradio.ccc.de/cre042.html Chaosradio Express z Tim Pritlove i Harald Welte (niemiecki)]
 
 == Filmy == 
 * [http://people.openmoko.org/mickey/videos/dialer-xvid.avi wykonywanie połączeń z Neo1973. film dzięki uprzejmości Daniela 'alphaone' Willmann'a]
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video z prezentacji OpenMoko by Sean Moss Pultz na konferencji FOSdem 23 Sty 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video z prezentacji Openmoko by Sean Moss Pultz na konferencji FOSdem 23 Sty 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Wersja powyższego filmu w wyższej rozdzielczości i z lepiej widocznym  tekstem.
 
 == Zdjęcia ==
