--- a/Introduction%2Fzh_cn.mw
+++ b/Introduction%2Fzh_cn.mw
@@ -1,12 +1,12 @@
-OpenMoko 致力于创建世界上首个开源手机软件平台。
+Openmoko 致力于创建世界上首个开源手机软件平台。
 
 我们相信基于社区的自下而上的协作开发模式要比一般的自上而下的合作开发模式更有利于推动这个项目。
 如果您想获得详细的介绍，请访问这个[http://lists.openmoko.org/pipermail/announce/2007-January/000000.html 公告]
 
-OpenMoko 将会被各种各样的 Linux 手机所支持。第一款支持 Openmoko 的手机是由 FIC 研发的 Neo1973。
+Openmoko 将会被各种各样的 Linux 手机所支持。第一款支持 Openmoko 的手机是由 FIC 研发的 Neo1973。
 
 == 视频 == 
-* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video of the talk about OpenMoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
+* [http://video.google.co.uk/videoplay?docid=-3742589179435830945&hl=en-GB Google Video of the talk about Openmoko by Sean Moss Pultz at FOSdem on 23rd Feb 2007.]
 * [http://rapidshare.com/files/18781887/rect.avi Version of above talk, in higher resolution, with the screen zoomed and transformed to the projector screen.] Text is visible here, unlike in the version above.
 
 == 照片 ==
